# MK-s_Alter_Ego

./: .env.txt  README.md  alter_ego.py  app.py  backend.py  pyproject.toml  records.json  requirements.txt  schemas.py  test.ipynb
data/: summary_MK.txt
