[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mks-alter-ego"
version = "0.1.0"
description = "MK's Alter Ego"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pydantic",
    "jupyter",
    "pypdf",
    "requests",
    "openai",
    "gradio",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
